[CLOUDTRUST-6789] Migrate from Test container to keycloak test framework